--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^2.1.1",
     "express": "^4.16.2",
+    "mime-types": "^2.1.17",
     "multer": "^1.3.0"
   }
 }
